--- a/metadata.yaml
+++ b/metadata.yaml
@@ -25,5 +25,6 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcc 'PR'
 - !lcsh 'English essays'
+- GITenberg
 title: 'Winterslow: Essays and Characters Written There'
 url: http://www.gutenberg.org/ebooks/39269
